@@ -1,5 +1,11 @@
 2005-10-10  Tom Tromey  <tromey@redhat.com>
 
+	* tree.cc (handle_op_assignment): Special case RDIV_EXPR.  Use
+	stabilize_reference, not save_expr.
+	(visit_op_assignment): Use handle_op_assignment.
+
+2005-10-10  Tom Tromey  <tromey@redhat.com>
+
 	* tree.cc (handle_double): Swap words on little endian machines.
 
 2005-10-10  Tom Tromey  <tromey@redhat.com>
